# zooapi

./: .coverage  .env  Dockerfile  README.md  conftest.py  db.json  main.py  pyproject.toml
blueprints/: animals.py  staff.py
modules/: animals.py  db.py  employees.py
static/css/: style.css
templates/: welcome.html
tests/: test_animals.py  test_employees.py  test_main.py  test_trial.py
tests/animals/: test_animals_delete.py  test_animals_exception.py  test_animals_get_all.py  test_animals_get_id.py  test_animals_post.py  test_animals_put.py
tests/employees/: test_employees_delete.py  test_employees_exception.py  test_employees_get_all.py  test_employees_get_id.py  test_employees_post.py  test_employees_put.py
