[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["farroshayray <farros.hr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.1"
supabase = "^2.9.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
coverage = "^7.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
